@@ -34,12 +34,23 @@ import org.apache.lucene.store.Directory;
 import org.apache.lucene.store.TrackingDirectoryWrapper;
 import org.apache.lucene.util.Constants;
 
+// nocommit fix jdocs for all codec's SI writer impls to
+// describe their format
+
+// nocommit fix codec api to pass this around so they can
+// store attrs
+
+// nocommit add attrs api like FI
+
+// nocommit fix PFPF to use attrs api instead of its .per file
+
 /**
  * Information about a segment such as it's name, directory, and files related
  * to the segment.
  *
  * @lucene.experimental
  */
+// nocommit make final again once atts are working here
 public class SegmentInfo implements Cloneable {
   
   // TODO: remove these from this class, for now this is the representation
